--- a/src/main/resources/StyleSheets/LoginStyle.css
+++ b/src/main/resources/StyleSheets/LoginStyle.css
@@ -1,15 +1,8 @@
-.root{
-    -fx-background-color: white;
-}
+@import "mainStyle.css";
+
 
 .textField {
 
-    -fx-border-color: black;
-    -fx-border-width: 2;
-    -fx-border-radius: 10;
-    -fx-background-color: red;
-    -fx-background-radius: 12;
-    -fx-background-insets: 1;
 }
 
 .vbox{
