Updates to loginview, css, Functions, and Homescreen

--- a/src/main/resources/StyleSheets/LoginStyle.css
+++ b/src/main/resources/StyleSheets/LoginStyle.css
@@ -1,8 +1,9 @@
 @import "mainStyle.css";
 
 
-.textField {
-
+TextField {
+    -fx-background-color: primaryColor;
+    -fx-border-color: fourthColor;
 }
 
 .vbox{
