Updates to loginview, css, Functions, and Homescreen

--- a/src/main/resources/StyleSheets/LoginStyle.css
+++ b/src/main/resources/StyleSheets/LoginStyle.css
@@ -3,7 +3,7 @@
 
 TextField {
     -fx-background-color: primaryColor;
-    -fx-border-color: fourthColor;
+    -fx-border-color: fifthColor;
 }
 
 .vbox{
