--- a/src/main/resources/StyleSheets/HomeStyle.css
+++ b/src/main/resources/StyleSheets/HomeStyle.css
@@ -1,5 +1,47 @@
 @import "mainStyle.css";
 
-.background{
+
+VBox {
+    -fx-background-color: transparent;
+}
+
+ScrollPane {
+    -fx-background: backColor;
+    -fx-border-color: fourthColor backColor backColor backColor;
+    -fx-border-width: 5 2 2 2;
+    -fx-padding: 10 0 0 0;
+}
+    ScrollPane .scroll-bar, .increment-arrow, .decrement-arrow  {
+        -fx-background-color: backColor;
+        -fx-border-color: backColor;
+        -fx-border-width: 2;
+        -fx-padding: 2;
+    }
+
+    ScrollPane .thumb {
+        -fx-background-color: primaryColor;
+    }
+    ScrollPane .thumb:pressed {
+        -fx-background-color: secondColor;
+    }
+
+TilePane {
+    -fx-border-color: black;
+    -fx-pref-columns: 1;
+    -fx-vgap: 10;
+}
+
+.splitVBox {
+    -fx-border-color: null;
+    -fx-border-width: 2;
+    -fx-alignment: TOP_CENTER;
+}
+
+.container {
+    -fx-padding: 20;
+    -fx-spacing: 10;
+}
+
+.center {
 
 }
