--- a/src/main/resources/StyleSheets/mainStyle.css
+++ b/src/main/resources/StyleSheets/mainStyle.css
@@ -2,9 +2,10 @@
 
     primaryColor: white;
     secondColor: #dfecfd; /* blue */
-    thirdColor: #448ef3; /* Navy */
-    fourthColor: #0A4AA2; /* Light Blue */
-    fifthColor: #041E42;
+    thirdColor: #AFCFFA;
+    fourthColor: #448ef3; /* Navy */
+    fifthColor: #0A4AA2; /* Light Blue */
+    sixthColor: #041E42;
 
     backColor: #91bcf8;
 }
@@ -37,15 +38,15 @@ Button {
 /* Button Styles */
 
 .buttonStandard {
-    -fx-border-color: fourthColor;
+    -fx-border-color: fifthColor;
     -fx-background-color: secondColor;
-    -fx-text-fill: fourthColor;
+    -fx-text-fill: fifthColor;
     -fx-font-style: italic;
     -fx-font-weight: bold;
     -fx-font-family: "Source Code Pro";
 }
     .buttonStandard:pressed{
-        -fx-background-color: fourthColor;
+        -fx-background-color: fifthColor;
         -fx-text-fill: primaryColor;
     }
 
@@ -60,13 +61,18 @@ Button {
     .buttonLightStandard:pressed{
         -fx-background-color: secondColor;
         -fx-border-color: secondColor;
-        -fx-text-fill: fourthColor;
+        -fx-text-fill: fifthColor;
     }
 
 
 /* Font Styles */
 
-
+.fontHeader1 {
+    -fx-font-family: "Source Code Pro";
+    -fx-font-size: 20;
+    -fx-font-weight: bold;
+    -fx-text-fill: sixthColor;
+}
 
 
 /* Header CSS */
@@ -74,9 +80,8 @@ Button {
 .headerBackground {
     -fx-spacing: 20;
     -fx-alignment: center;
-    -fx-background-color: fifthColor;
-    -fx-pref-height: 50;
-    -fx-border-color: fifthColor;
+    -fx-background-color: sixthColor;
+    -fx-border-color: sixthColor;
     -fx-border-width: 2;
     -fx-effect: dropshadow(three-pass-box, white, 50, 0, 0, 0);
 }
