Work on map view

--- a/src/main/resources/StyleSheets/CreateEventStyle.css
+++ b/src/main/resources/StyleSheets/CreateEventStyle.css
@@ -1,1 +1,21 @@
 @import "mainStyle.css";
+
+.eventName {
+    -fx-background-color: green;
+}
+
+.eventDesc {
+
+}
+
+.eventTime {
+
+}
+
+Label {
+
+}
+
+.leftPane {
+
+}
